<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="login">登陆</string>
    <string name="exit">退出</string>
    <string name="register">注册</string>
    <string name="app_name">计步器</string>
    <string name="remember">记住密码</string>
    <string name="reg_info">请填写以下注册信息</string>
    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">卡路里</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="settings_title">设置</string>
    <string name="step_length">步长:</string>
    <string name="cm">厘米</string>
    <string name="weigth">体重:</string>
    <string name="kg">公斤</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="switch_account">切换账号</string>
    <string name="delete_account">删除账户</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_info">不修改请留空</string>
    <string name="weekStatistics_info">最近一周计步数据</string>

</resources>