<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8DC" >

    <EditText
        android:id="@+id/editText_editText_Reg_PassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Reg_UserName"
        android:layout_alignRight="@+id/editText_Reg_UserName"
        android:layout_below="@+id/editText_Reg_UserName"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/reg_info"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_Reg_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_editText_Reg_PassWord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/register"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_Reg_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/username" >

        <requestFocus />
    </EditText>

</RelativeLayout>