<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login" >

    <EditText
        android:id="@+id/editText_PassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_UserName"
        android:layout_alignRight="@+id/editText_UserName"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_login"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_alignRight="@+id/editText_PassWord"
        android:layout_marginRight="25dp"
        android:text="@string/register"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_PassWord"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:ems="10"
        android:hint="@string/username"
        android:textSize="24sp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_login"
        style="@drawable/btn_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_PassWord"
        android:layout_below="@+id/editText_PassWord"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="58dp"
        android:text="@string/login"
        android:textSize="24sp" />

</RelativeLayout>