<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8DC"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dip"
        android:text="@string/settings_title"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@id/step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="15dip"
            android:text="@string/step_length" />

        <TextView
            android:id="@id/step_lenth_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/step"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/step" />
    </RelativeLayout>

    <SeekBar
        android:id="@id/step_lenth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:max="14"
        android:maxHeight="5dip"
        android:minHeight="5dip"
        android:progress="3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weigth" />

        <TextView
            android:id="@id/weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip" />
    </LinearLayout>

    <SeekBar
        android:id="@id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:max="80"
        android:maxHeight="5dip"
        android:minHeight="5dip"
        android:progress="3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:hint="@string/change_password_info"
            android:inputType="textPassword"
            android:minWidth="240dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginRight="35dip"
        android:layout_marginTop="5dip"
        android:paddingTop="15dip" >

        <Button
            android:id="@id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_bg"
            android:onClick="onClick"
            android:paddingBottom="10dip"
            android:paddingLeft="25dip"
            android:paddingRight="25dip"
            android:paddingTop="10dip"
            android:text="@string/save"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_bg"
            android:onClick="onClick"
            android:paddingBottom="10dip"
            android:paddingLeft="25dip"
            android:paddingRight="25dip"
            android:paddingTop="10dip"
            android:text="@string/cancle"
            android:textStyle="bold" />
    </RelativeLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/switch_account"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_bg"
        android:onClick="onClick"
        android:paddingBottom="10dip"
        android:paddingLeft="25dip"
        android:paddingRight="25dip"
        android:paddingTop="10dip"
        android:text="@string/switch_account"
        android:textSize="15sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_bg2"
        android:onClick="onClick"
        android:paddingBottom="10dip"
        android:paddingLeft="25dip"
        android:paddingRight="25dip"
        android:paddingTop="10dip"
        android:text="@string/delete_account"
        android:textSize="15sp" />

</LinearLayout>